create a new delete and put method in be and add swal fire

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -15,3 +15,27 @@
 .book{
     flex:1
 }
+
+img {
+    width:  200px;
+    height: 300px;
+    object-fit: cover;
+    background-color: skyblue;
+}
+
+.delete{
+    border: border solid 10px;
+    border-color: black;
+    padding: 3px 6px;
+    background-color:  white;
+    cursor: pointer;
+    color:red
+}
+
+.update{
+    border: none;
+    padding: 3px 6px;
+    background-color: white;
+    cursor: pointer;
+    color: skyblue
+}
